--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -93,7 +93,7 @@
 		  <fieldset class="form-group" style="margin-bottom:0px">
 
 				  <label class="form-label-bold" for="sold-out-message">
-					  Close registration before event (optional)
+					  Close registration before event
 				  </label>
 				  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
 				  <div class="form-group form-group-day form-date">
