--- a/app/views/includes/head.html
+++ b/app/views/includes/head.html
@@ -1,2 +1,6 @@
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="screen" rel="stylesheet" type="text/css" /><!--<![endif]-->
+
+{% if external_journey %} 
+	<link href="/public/great-library/great-pattern-library.css" media="screen" rel="stylesheet" type="text/css">
+{% endif %}
