debug labels removed

--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -157,7 +157,7 @@
 					  <p id="markets-4-add" onclick="showMarket4()"
 						 {% if marketEntered3 == true  and  marketEntered4 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px;"
 						 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px; display:none;" {% endif %}
-						 >Add another market 444</p>
+						 >Add another market</p>
 
 					  <div id="market-container-4"
 						   {% if marketEntered4 == true  %} style="width:40%; margin-bottom:10px;"
@@ -172,7 +172,7 @@
 					  <p id="markets-5-add" onclick="showMarket5()"
 						 {% if marketEntered4 == true  and  marketEntered5 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px;"
 						 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px; display:none;" {% endif %}
-					     >Add another market 55555</p>
+					     >Add another market</p>
 
 					  <div id="market-container-5"
 						   {% if marketEntered5 == true  %} style="width:40%; margin-bottom:10px;"
@@ -187,7 +187,7 @@
 					  <p id="markets-6-add" onclick="showMarket6()"
 						 {% if marketEntered5 == true  and  marketEntered6 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px;"
 						 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px; display:none;" {% endif %}
-					     >Add another market  66666</p>
+					     >Add another market</p>
 
 					  <div id="market-container-6"
 						   {% if marketEntered6 == true  %} style="width:40%; margin-bottom:10px;"
@@ -202,7 +202,7 @@
 					  <p id="markets-7-add" onclick="showMarket7()"
 						 {% if marketEntered6 == true  and  marketEntered7 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px;"
 						 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px; display:none;" {% endif %}
-					  		>Add another market  777</p>
+					  		>Add another market</p>
 
 					  <div id="market-container-7"
 						   {% if marketEntered7 == true  %} style="width:40%; margin-bottom:10px;"
@@ -217,7 +217,7 @@
 					  <p id="markets-8-add" onclick="showMarket8()"
 						 {% if marketEntered7 == true  and  marketEntered8 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px;"
 						 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px; display:none;" {% endif %}
-					  	 >Add another market  8888</p>
+					  	 >Add another market</p>
 
 					  <div id="market-container-8"
 						   {% if marketEntered8 == true  %} style="width:40%; margin-bottom:10px;"
@@ -232,7 +232,7 @@
 					  <p id="markets-9-add" onclick="showMarket9()"
 						 {% if marketEntered8 == true  and  marketEntered9 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px;"
 						 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px; display:none;" {% endif %}
-					  	 >Add another market  999</p>
+					  	 >Add another market</p>
 
 					  <div id="market-container-9"
 						   {% if marketEntered9 == true  %} style="width:40%; margin-bottom:10px;"
@@ -247,7 +247,7 @@
 					  <p id="markets-10-add" onclick="showMarket10()"
 						 {% if marketEntered9 == true  and  marketEntered10 == false  %} style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px;"
 						 {% else %}	style="color: #005ea5; text-decoration: underline; cursor: pointer; margin-top:10px; display:none;" {% endif %}
-					  >Add another market  10</p>
+					  >Add another market</p>
 
 					  <div id="market-container-10"
 						   {% if marketEntered10 == true  %} style="width:40%; margin-bottom:10px;"
