--- a/app/views/create-event/description.html
+++ b/app/views/create-event/description.html
@@ -118,8 +118,8 @@
 
 
 					  <div style="width:40%; margin-bottom:10px;" id="market-container-1">
-						  <select class="form-control" id="market-box-1" name="market-box-1" value="{{data['market-box-1']}}">
-							  <option value="" selected="selected">Choose a location</option>
+						  <select class="form-control" id="market-box-1">
+							  <option value="{{data['market-box-1']}}" selected>{{ data['market-box-1']}}</option>
 						  </select>
 				  	  </div>
 
@@ -594,9 +594,10 @@
   </div>
 </main>
 
+{% endblock %}
 
 
-
+{% block page_scripts %}
 <script>
 
 	// SHOW MORE MARKET BOXES
@@ -735,23 +736,13 @@
 <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
 <script type="text/javascript" src="https://unpkg.com/registers-picker-engine@0.0.2"></script>
 <script type="text/javascript" src="https://unpkg.com/accessible-typeahead@0.4.1"></script>
-<script type="text/javascript">
+<script>
+
 	var dataFilePath = '/public/data/picker-data-4.json';
 	var source = locationPickerSuggestions(dataFilePath);
 	var counter = 1;
 
-	function addMarketBox(parentID){
-	    id = 'market-box-' + counter++;
-	    select = document.createElement('select');
-	    select.class = 'form-control';
-	    select.id = id;
-		select.name = id;
-		document.getElementById(parentID).appendChild(select);
-
-		addMarketBoxJs(id, source);
-	}
-
-	function addMarketBoxJs(elementID, source){
+	function addMarketBoxJs(elementID, source, value){
 	    AccessibleTypeahead.enhanceSelectElement({
 			autoselect: true,
 			id:elementID,
@@ -759,19 +750,20 @@
 			selectElement: document.getElementById(elementID),
 			minLength: 1,
 			source: source
-		})
+		});
+		$('#' + elementID)[0].value = value;
 	}
 
-	addMarketBoxJs('market-box-1', source);
-	addMarketBoxJs('market-box-2', source);
-	addMarketBoxJs('market-box-3', source);
-	addMarketBoxJs('market-box-4', source);
-	addMarketBoxJs('market-box-5', source);
-	addMarketBoxJs('market-box-6', source);
-	addMarketBoxJs('market-box-7', source);
-	addMarketBoxJs('market-box-8', source);
-	addMarketBoxJs('market-box-9', source);
-	addMarketBoxJs('market-box-10', source);
+	addMarketBoxJs('market-box-1', source, 	{{ data['market-box-1'] | dump | safe }});
+	addMarketBoxJs('market-box-2', source, 	{{ data['market-box-2'] | dump | safe }});
+	addMarketBoxJs('market-box-3', source, 	{{ data['market-box-3'] | dump | safe }});
+	addMarketBoxJs('market-box-4', source, 	{{ data['market-box-4'] | dump | safe }});
+	addMarketBoxJs('market-box-5', source, 	{{ data['market-box-5'] | dump | safe }});
+	addMarketBoxJs('market-box-6', source, 	{{ data['market-box-6'] | dump | safe }});
+	addMarketBoxJs('market-box-7', source, 	{{ data['market-box-7'] | dump | safe }});
+	addMarketBoxJs('market-box-8', source, 	{{ data['market-box-8'] | dump | safe }});
+	addMarketBoxJs('market-box-9', source, 	{{ data['market-box-9'] | dump | safe }});
+	addMarketBoxJs('market-box-10', source, {{ data['market-box-10'] | dump | safe }});
 
 </script>
 
