--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -1,4 +1,5 @@
 <!-- Javascript -->
+{% block body_end %}
 <!--[if lte IE 8]><script src="/public/javascripts/bind.js"></script><![endif]-->
 <script src="/public/javascripts/details.polyfill.js"></script>
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
@@ -10,3 +11,5 @@
 {% if useAutoStoreData %}
   <script src="/public/javascripts/auto-store-data.js"></script>
 {% endif %}
+
+{% endblock %}
