--- a/app/views/create-event/summary.html
+++ b/app/views/create-event/summary.html
@@ -81,7 +81,7 @@
 				  <dt class="cya-question">
 					  Venue
 				  </dt>
-				  <dd class="cya-answer" style="white-space: pre-wrap;">{{ data['full-address-holder'] }}</dd>
+				  <dd class="cya-answer" style="white-space: pre-wrap;">{{ data['full-address-holder'] }}<br>{{ data['venue-additional-notes'] }}</dd>
 				  <dd class="cya-change ">
 					  <a href="#">
 						  Change
