--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -54,7 +54,7 @@
 					  <br>{{data['event-day'] }} {{ data['event-month-name'] }} {{ data['event-year'] }}
 					  <br>{{data['event-start-time'] }} to {{ data['event-finish-time'] }}
 				  </p>
-				  <p style="white-space: pre-wrap; margin-left:5px; ">{{data['full-address-holder'] }}</p>
+				  <p style="white-space: pre-wrap; margin-left:5px; ">{{ data['full-address-holder'] }}<br>{{ data['venue-additional-notes'] }}</p>
 
 
 
