--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -59,7 +59,7 @@
 		  <!--   ADDRESS  -->
 		  <div class="form-group" style="margin-top:0px; margin-bottom:0px; width:100%;">
 
-			  <p style="margin-bottom:25px">A link to a map will be shown.</p>
+			  <p style="margin-bottom:25px">Venue details will be displayed on the webpage, along with a link to a map.</p>
 
 
 			  	<div class="form-group {% if errorBuilding %} form-group-error {% endif %}">
@@ -112,7 +112,7 @@
 					  <label class="form-label-bold" for="venue-additional-notes">
 						  Additional venue details (optional)
 
-						  <span class="form-hint" style="margin-bottom: 0px; margin-top:3px;">For example, Ample parking available</span>
+						  <span class="form-hint" style="margin-bottom: 0px; margin-top:3px;">For example, you may want to include any travel instructions or parking details.</span>
 					  </label>
 					  <textarea class="form-control" name="venue-additional-notes" id="venue-additional-notes" rows="3" style="width: 100%;">{{ data['venue-additional-notes'] }}</textarea>
 				  </div>
@@ -159,7 +159,7 @@
 
 		  <div class="form-group" style="margin-top:40px">
 			  <input type="submit" class="button" value="Save and continue">
-			  <p style="margin-top:25px"><a href="/create-event/organiser">I'll complete this later - I don't have this information yet</a></p>
+			  <p style="margin-top:25px"><a href="/create-event/images">I'll complete this later - I don't have this information yet</a></p>
 
 			  <p id="enter-new-address" style="display:none">
 
