--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -46,34 +46,38 @@
 	  <form action="/create-event/tickets-onwards" method="get" class="form">
 
 		  <!--   PLACES  -->
-		  <fieldset class="form-group">
+		  <fieldset class="form-group {% if errorAttendee %} form-group-error {% endif %}">
 
-			  {% if errorAttendee %}
-			  	<div class="form-group  form-group-error">
-			  {% endif %}
-
-				  <label class="form-label-bold">
-					  Event capacity
-					  {% if errorAttendee %}
-						  <span class="error-message">
-							  Error message about personal details goes here
-						  </span>
-					  {% endif %}
-				  </label>
+			  <label class="form-label-bold">
+				  How many people do you want to be able to register for this event?
+				  {% if errorAttendee %}
+					  <span class="error-message">
+						  Error message about personal details goes here
+					  </span>
+				  {% endif %}
+			  </label>
 
 
-				  <div class="form-date">
-						<!-- <p class="form-hint">For example, 31 3 1980</p>  -->
-					  <div class="form-group form-group-day">
-						   <input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
-								  id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*"
-								  value="{{ data['attendee-quantity'] }}">
-				      </div>
+			  <div class="form-date">
+					<!-- <p class="form-hint">For example, 31 3 1980</p>  -->
+				  <div class="form-group form-group-day">
+					   <input class="form-control  {% if errorAttendee %} form-control-error {% endif %}"
+							  id="attendee-quantity" name="attendee-quantity" type="number" pattern="[0-9]*"
+							  value="{{ data['attendee-quantity'] }}">
 				  </div>
+			  </div>
 
-			  {% if errorAttendee %}
-				</div>
-			  {% endif %}
+
+			  <div style="">
+				  <details role="group" style="width:650px;  ">
+					  <summary role="button" aria-controls="details-content-0" aria-expanded="false" style="margin-top:10px;"><span class="summary">How availability will be displayed</span></summary>
+					  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
+						  <p>
+							  Overall event capacity won't be made public - but as soon as 10 or fewer tickets remain, a message will display on the webpage.
+						  </p>
+					  </div>
+				  </details>
+			  </div>
 
 		  </fieldset>
 
