--- a/app/views/create-event/venue.html
+++ b/app/views/create-event/venue.html
@@ -112,7 +112,7 @@
 					  <label class="form-label-bold" for="venue-additional-notes">
 						  Additional venue details (optional)
 
-						  <span class="form-hint" style="margin-bottom: 0px; margin-top:3px;">For example, you may want to include any travel instructions or parking details.</span>
+						  <span class="form-hint" style="margin-bottom: 0px; margin-top:3px;">For example, travel instructions or parking details.</span>
 					  </label>
 					  <textarea class="form-control" name="venue-additional-notes" id="venue-additional-notes" rows="3" style="width: 100%;">{{ data['venue-additional-notes'] }}</textarea>
 				  </div>
