updates for registration flow

--- a/app/views/register/check-your-answers.html
+++ b/app/views/register/check-your-answers.html
@@ -10,6 +10,9 @@
 {% block content %}
 {% include "includes/great-header.html" %} 
 
+<style type="text/css">
+  dt.cya-question {font-weight: normal !important}
+</style>
 <main id="content" role="main">
   <div class="grid-row">
     <div class="column-two-thirds">
@@ -155,7 +158,10 @@
 
 <!-- TICKET DETAILS -->
         <h2 class="heading-medium">
-        Ticket details
+        Tickets
+      </h2>
+       <h2 class="heading-small">
+        Ticket 1
       </h2>
       <dl class="govuk-check-your-answers cya-questions-short">
         <div>
