--- a/app/views/register/additional-questions.html
+++ b/app/views/register/additional-questions.html
@@ -152,7 +152,7 @@
 
 
 				  <div class="form-group form-control-2-3 {% if errorQuestionEmpty%} form-group-error {% endif %}">
-					  <label class="bold" for="question">
+					  <label class="form-label" for="question">
 						  Question with short answer
 						  {% if errorQuestionEmpty %}
 									<span class="error-message">
@@ -167,7 +167,7 @@
 				  </div>
 
 				  <div class="form-group  {% if errorQuestionEmpty%} form-group-error {% endif %}">
-					  <label class="bold" for="question">
+					  <label class="form-label" for="question">
 						  Question with long answer
 						  {% if errorQuestionEmpty %}
 									<span class="error-message">
@@ -182,7 +182,7 @@
 				  </div>
 				  <div class="form-group {% if errorQuestionEmpty%} form-group-error {% endif %}">
 
-					  <label class="form-label-bold" for="question">
+					  <label class="form-label" for="question">
 						  Question with yes or no
 						  {% if errorQuestionEmpty %}
 									<span class="error-message">
@@ -207,7 +207,7 @@
 							  
 				<div class="form-group">
 			 
-				  <label class="form-label-bold" for="town" style="margin-bottom:5px; ">Question with multiple answers</label>
+				  <label class="form-label" for="town" style="margin-bottom:5px; ">Question with multiple answers</label>
 				  <fieldset>
 			      <legend>
 			        <span class="visually-hidden">Which types of waste do you transport regularly?</span>
