--- a/app/views/register/business-details.html
+++ b/app/views/register/business-details.html
@@ -165,6 +165,8 @@
 					  </div>
 				  </div>
 
+<div class="typeahead__wrapper"><input class="typeahead__hint" readonly="true" tabindex="-1"><input aria-owns="market-box-1__listbox" autocomplete="off" class="typeahead__input" id="market-box-1" name="market-box-1" placeholder="" role="combobox" type="text"><ul class="typeahead__menu typeahead__menu--inline typeahead__menu--hidden" id="market-box-1__listbox" role="listbox"><li class="typeahead__option" id="market-box-1__option--0" role="option" tabindex="-1">Italy</li></ul><div aria-live="polite" role="status" style="border: 0px; clip: rect(0px 0px 0px 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"><span></span></div></div>
+
 				  <div class="form-group  {% if errorQuestionEmpty%} form-group-error {% endif %}">
 					  <label class="bold" for="question">
 						  Sector of your business
